<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textSize="80sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="serif-monospace"
        android:id="@+id/title"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical"
        >
        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/text_border"
            android:layout_margin="10sp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:paddingTop="10sp"
            android:paddingBottom="5sp"
            android:hint="@string/first_name"
            android:id="@+id/firstname"
            />
        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/text_border"
            android:layout_margin="10sp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:hint="@string/last_name"
            android:id="@+id/surname"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:id="@+id/signIn"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/signUp"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>