<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_person_pin_black_48dp"
        android:id="@+id/friend_img"
        android:contentDescription="@string/add_friend"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical"
        android:paddingTop="10sp"
        android:paddingBottom="10sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/friend_name"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/friend_last_mssg"
            android:textSize="14sp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:text="@string/default_message"/>

    </LinearLayout>



</LinearLayout>