<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10sp"
    android:paddingRight="10sp"
    android:paddingBottom="10sp"
    android:background="@drawable/dialog_border"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:text="@string/add_friend"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/new_friend"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/add_friend_prompt"/>
    <EditText
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:paddingBottom="10sp"
        android:paddingEnd="10sp"
        android:paddingStart="10sp"
        android:paddingTop="10sp"
        android:textColor="@color/black"

        app:layout_constraintTop_toBottomOf="@+id/add_friend_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cancel_add_friend"
        android:id="@+id/new_friend"
        android:background="@drawable/text_border"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_add_friend"
        app:layout_constraintTop_toBottomOf="@+id/new_friend"
        app:layout_constraintRight_toLeftOf="@+id/add_add_friend"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_add_friend"
        app:layout_constraintTop_toBottomOf="@+id/new_friend"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/cancel_add_friend"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/OK"
        />


</android.support.constraint.ConstraintLayout>